--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "charts",
   "version": "0.1.0",
   "private": true,
-  "homepage": "akifsahinkorkmaz.github.io/charts",
+  "homepage": "https://akifsahinkorkmaz.github.io/charts",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
